create manga and fix body request swagger
